--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
+      name="keyword"
+      content="로또, 로또번호, 당첨번호, 로또번호추천, 번호추천"
+    />
+    <meta name="description" content="로또번호를 무료로 추천해 드립니다." />
+    <!-- 구글 서치 콘솔 -->
+    <meta
       name="google-site-verification"
       content="TjybdxlQAn4mBaPbJq4E3LSY_6QrupLqcHN0FIyMi4M"
     />
+    <!-- css -->
     <link rel="stylesheet" href="style.css" />
     <title>로또번호추천</title>
   </head>
