--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
       content="로또, 로또번호, 당첨번호, 로또번호추천, 번호추천"
     />
     <meta name="description" content="로또번호를 무료로 추천해 드립니다." />
-    <!-- 구글 서치 콘솔 -->
+    <!-- 구글 서치 -->
     <meta
       name="google-site-verification"
       content="TjybdxlQAn4mBaPbJq4E3LSY_6QrupLqcHN0FIyMi4M"
+    />
+    <!-- 네이버 서치 -->
+    <meta
+      name="naver-site-verification"
+      content="9a9ea9249afefb84f5089de8f0edfdb6a459cd0a"
     />
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
