사이드바, 애드센스, 날짜 추가

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       name="naver-site-verification"
       content="9a9ea9249afefb84f5089de8f0edfdb6a459cd0a"
     />
+    <!-- 구글 애드센스 -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5522124868809856"
+      crossorigin="anonymous"
+    ></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
     <title>로또번호추천</title>
@@ -28,6 +34,7 @@
       <h1 id="header">로또번호추천</h1>
     </header>
     <main>
+      <div id="day">날짜</div>
       <div id="clock">time is here</div>
       <div id="btn">
         <button id="btn-add">누르세요!</button>
@@ -44,7 +51,9 @@
           <span id="ball-six" class="ball"></span>
         </div>
       </div>
+      <div id="select"></div>
     </main>
+    <nav class="sidebar">여기가 사이드바입니다.</nav>
     <footer>
       <p></p>
     </footer>
