일자, 홈페이지 바로가기 추가

--- a/index.html
+++ b/index.html
@@ -53,7 +53,16 @@
       </div>
       <div id="select"></div>
     </main>
-    <nav class="sidebar">여기가 사이드바입니다.</nav>
+    <nav class="sidebar">
+      <div class="sidebar_img">
+        <a
+          href="https://www.dhlottery.co.kr/common.do?method=main"
+          target="_blank"
+        >
+          동행복권바로가기
+        </a>
+      </div>
+    </nav>
     <footer>
       <p></p>
     </footer>
